Trim jdk21 related encapsulation exceptions in gh config