@@ -137,21 +137,7 @@
         <artifactId>scalatest-maven-plugin</artifactId>
         <configuration>
           <argLine>
-            --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
-            --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-            --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-            --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
-            --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
-            --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-            --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-            --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
-            --add-opens=java.base/java.io=ALL-UNNAMED
-            --add-opens=java.base/java.nio=ALL-UNNAMED
             --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-            --add-opens=java.base/java.lang=ALL-UNNAMED
-            --add-opens=java.base/java.util=ALL-UNNAMED
-            --add-opens=java.base/java.net=ALL-UNNAMED
-            --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
